--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
    <main class="container">
-    
+    <div class="title"><img src="hand.png" alt="">
+        <h1><span>Expense</span> tracker</h1></div>
    </main> 
     
 </body>
