--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
    <main class="container">
     <div class="title"><img src="hand.png" alt="">
         <h1><span>Expense</span> tracker</h1></div>
+        <div class="labels">
+            <div id="label-item">
+                <label for="place">name</label>
+                <input type="text" id="place">
+            </div>
+        </div>
    </main> 
     
 </body>
