--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <label for="place">name</label>
                 <input type="text" id="place">
             </div>
+
+            <div id="label-item">
+                <label for="date">date</label>
+                <input type="date" id="date">
+            </div>
         </div>
    </main> 
     
