--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <label for="date">date</label>
                 <input type="date" id="date">
             </div>
+
+            <div id="label-item">
+                <label for="amount">amount</label>
+                <input type="number" id="amount">
+            </div>
         </div>
    </main> 
     
