add + add expense

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                 <label for="amount">amount</label>
                 <input type="number" id="amount">
             </div>
+
+
+    
         </div>
+        <button id="add-btn">+ add expense</button>
    </main> 
     
 </body>
