--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                 <th>Date</th>
                 <th>Income</th>
             </tr>
-            
+
         </table>
-   </main> 
+
+   </main>
+   <script src="app.js"></script> 
     
 </body>
 </html>
