--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
    <main class="container">
-    <div class="title"><img src="hand.png" alt="">
+    <div class="title"><img src="hand.png" alt="money">
         <h1><span>Expense</span> tracker</h1></div>
         <div class="labels">
             <div id="label-item">
