--- a/index.html
+++ b/index.html
@@ -10,17 +10,12 @@
 <body>
 
     <main class="container">
-    <div class="title"><img src="hand.png" alt="money">
+    <div class="title"><img src="hand.png" alt="">
         <h1><span>Expense</span> tracker</h1></div>
         <div class="labels">
             <div id="label-item">
                 <label for="place">name</label>
                 <input type="text" id="place">
-            </div>
-
-            <div id="label-item">
-                <label for="date">date</label>
-                <input type="date" id="date">
             </div>
 
             <div id="label-item">
