--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 
     
         </div>
-        <button id="add-btn">+ add expense</button>
+        <button id="add-btn">- add expense</button>
+        <br>
+        <button id="add-btn">+ add income</button>
         <table id="t-ble">
             <tr id="t-row">
                 <th id="t-head">Name</th>
