--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     
         </div>
         <button id="add-btn">- add expense</button>
+        <table id="t-ble"></table>
         <br>
         <button id="add-btn">+ add income</button>
         <table id="t-ble">
