--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
         </div>
         <button id="add-btn">- add expense</button>
-        <table id="t-ble"></table>
+        <table id="t-ble">
         <br>
         <button id="add-btn">+ add income</button>
         <table id="t-ble">
