--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         </div>
         <button id="add-btn">- add expense</button>
         <table id="t-ble">
+            <tr id="t-row">
+                
+            </tr>
         <br>
         <button id="add-btn">+ add income</button>
         <table id="t-ble">
