changer delete container

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 
     <main class="container">
-    <div class="title"><img src="hand.png" alt="">
-        <h1><span>Expense</span> tracker</h1></div>
+        <h1><span>Expense</span> tracker</h1>
         <div class="labels">
             <div id="label-item">
                 <label for="place">name</label>
