--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1><span>Expense</span> tracker</h1>
         <div class="labels">
             <div id="label-item">
-                <label for="place">name</label>
-                <input type="text" id="place">
+                <label for="place">Name</label>
+                <input type="text" id="input">
             </div>
 
             <div id="label-item">
