--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     
         </div>
-        <button id="add-btn">+ add income</button>
+        <button onclick="addBtn()">+ add Expense</button>
         <table id="t-ble">
             <tr id="t-row">
                 <th id="t-head">Name</th>
-                <th>Income</th>
+                <th>transaction</th>
             </tr>
 
         </table>
