--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1><span>Expense</span> tracker</h1>
         <div class="labels">
             <div id="label-item">
-                <label for="place">Name</label>
+                <label for="input">Name</label>
                 <input type="text" id="input">
             </div>
 
