--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     
         </div>
-        <button onclick="addBtn()">+ add Expense</button>
+        <button onclick="addBtn()">+ add expense</button>
         <table id="t-ble">
             <tr id="t-row">
                 <th id="t-head">Name</th>
