--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY mno App</title>
 </head>
+
+
 <body>
+    <main>
+        <section>
+            <h1>
+                Monthly Salary Budget
+            </h1>
+            <p id="monthly_Budget"></p>
+            <form>
+                <input type="number" id="income_input" />
+                <button id="update_budget_button">Update Budget</button>
+            </form>
+        </section>
+    </main>
     
 </body>
 </html>
