--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 <button id="update_budget_button">Update Budget</button>
             </form>
         </section>
+        <h1>Add Expense</h1>
+        <form>
+            <input type="text" id="name_input" placeholder="Expense Name" />
+            <input type="number" id="amount_input" placeholder="Expense Amount" />
+            <button id="add_expense_button">Add Expense</button>
+        </form>
     </main>
     
 </body>
