add Expense List

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <input type="text" id="name_input" placeholder="Expense Name" />
             <input type="number" id="amount_input" placeholder="Expense Amount" />
             <button id="add_expense_button">Add Expense</button>
+            <section>
+                <h1>Expense List</h1>
+                <div id="expense_list"></div>
+            </section>
         </form>
     </main>
     
