add Total Expense

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <h1>Expense List</h1>
                 <div id="expense_list"></div>
             </section>
+
+            <h1>Total Expense</h1>
+            <p id="total_expenses"></p>
         </form>
     </main>
     
