add Remaining Balance

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
             <h1>Total Expense</h1>
             <p id="total_expenses"></p>
+            <section>
+                <h1>Remaining Balance</h1>
+                <p id="remaining_balance"></p>
+            </section>
         </form>
     </main>
     
