--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>MY mno App</title>
 </head>
 
@@ -36,6 +37,16 @@
                 <h1>Remaining Balance</h1>
                 <p id="remaining_balance"></p>
             </section>
+
+            <section>
+
+            </section>
+
+            <section>
+
+            </section>
+
+            sc
         </form>
     </main>
     
