--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <title>MY mno App</title>
 </head>
 
@@ -26,6 +26,7 @@
             <input type="text" id="name_input" placeholder="Expense Name" />
             <input type="number" id="amount_input" placeholder="Expense Amount" />
             <button id="add_expense_button">Add Expense</button>
+        </form>
             <section>
                 <h1>Expense List</h1>
                 <div id="expense_list"></div>
@@ -45,10 +46,11 @@
             <section>
 
             </section>
-
-            sc
-        </form>
     </main>
+
+    <script src="script.js"></script>
+
+
     
 </body>
 </html>
