--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>
                 Monthly Salary Budget
             </h1>
-            <p id="monthly_Budget"></p>
+            <p id="monthly_Salary_Budget"></p>
             <form>
                 <input type="number" id="income_input" />
                 <button id="update_budget_button">Update Budget</button>
