delete Monthly Salary Budget

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <main>
         <section>
             <h1>
-                Monthly Salary Budget
+                Monthly Budget
             </h1>
-            <p id="monthly_Salary_Budget"></p>
+            <p id="monthly_Budget"></p>
             <form>
                 <input type="number" id="income_input" />
                 <button id="update_budget_button">Update Budget</button>
