--- a/index.html
+++ b/index.html
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>MY mno App</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <title>My Budget App</title>
+    </head>
 
-
-<body>
-    <main>
-        <section>
-            <h1>
-                Monthly Budget
-            </h1>
-            <p id="monthly_Budget"></p>
-            <form>
-                <input type="number" id="income_input" />
-                <button id="update_budget_button">Update Budget</button>
-            </form>
-        </section>
-        <h1>Add Expense</h1>
-        <form>
-            <input type="text" id="name_input" placeholder="Expense Name" />
-            <input type="number" id="amount_input" placeholder="Expense Amount" />
-            <button id="add_expense_button">Add Expense</button>
-        </form>
+    <body>
+        <main>
             <section>
-                <h1>Expense List</h1>
+                <h1>
+                    Monthly Budget
+                </h1>
+                <p id="monthly_budget"></p>
+                <form>
+                    <input type="number" id="income_input" />
+                    <button id="update_budget_button">
+                        Update Budget
+                    </button>
+                </form>
+            </section>
+                <h1>
+                    Add Expense
+                </h1>
+                <form>
+                    <input type="text" id="name_input" placeholder="Expense Name" />
+                    <input type="number" id="amount_input" placeholder="Expense Amount" />
+                    <button id="add_expense_button">
+                        Add Expense
+                    </button>
+                </form>
+            <section>
+                <h1>
+                    Expense List
+                </h1>
                 <div id="expense_list"></div>
             </section>
 
-            <h1>Total Expense</h1>
-            <p id="total_expenses"></p>
+                <h1>
+                    Total Expenses
+                </h1>
+                <p id="total_expenses"></p>
             <section>
-                <h1>Remaining Balance</h1>
+                <h1>
+                    Remaining Balance
+                </h1>
                 <p id="remaining_balance"></p>
             </section>
+            
 
             <section>
 
             </section>
 
+
             <section>
 
             </section>
-    </main>
+        </main>
 
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 
+    </body>
 
-    
-</body>
-</html>
+    </html>
