--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <input type="text" id="name_input" placeholder="Expense Name" />
                     <input type="number" id="amount_input" placeholder="Expense Amount" />
                     <button id="add_expense_button">
-                        Add Expense
+                        - Expense
                     </button>
                 </form>
             <section>
