--- a/index.html
+++ b/index.html
@@ -8,12 +8,34 @@
 
     <body>
         <main>
+            <!-- <section>
+                <h1>
+                    Monthly Budget
+                </h1>
+                <p id="monthly_budget"></p>
+                <form>
+                    <input type="number" id="income_input" />
+                    <button id="update_budget_button">
+                        Update Budget
+                    </button>
+                </form>
+            </section> -->
                 <h1>
                     Budget App Tracker
                 </h1>
+                <form>
+                    <!-- <input type="text" id="name_input" placeholder="Expense Name"  id="transaction"/>
+                    <input type="number" id="amount_input" placeholder="Amount" id="amount"/> -->
+                    <!-- <button id="add_expense_button" class="expense" onclick="addExpense()">
+                        + Income
+                    </button>
+                    <button id="add_expense_button" class="income" onclick="addIncome()">
+                        - Expense
+                    </button> -->
+                </form>
                 <div class="input">
                     <input type="text" id="transaction" placeholder="Transaction name" />
-                    <input type="number" id="  amount" placeholder="Amount" />
+                    <input type="number" id="amount" placeholder="Amount" />
                 </div>
                 <div! class="button">
                     <button class="income" onclick="addIncome()">+ Income</button>
